--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <html data-theme="light"></html>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
