--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
       type="text/css"
     />
     <html data-theme="light"></html>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
